[package]
name = "storage-postgresql"
version = "0.1.0"
edition = "2024"

[dependencies]
storage.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
url.workspace = true
alloy-primitives.workspace = true
alloy-dyn-abi.workspace = true

deadpool-postgres = "0.10"
tokio-postgres = "0.7"
