[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true

alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
alloy.workspace = true
arbitrary.workspace = true
